--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "tsc",
         "start": "node dist/index.js",
-        "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+        "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register -r dotenv/config src/index.ts",
         "test": "jest",
         "test:watch": "jest --watch",
         "lint": "eslint src/**/*.ts",
@@ -22,22 +22,23 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
-        "express": "^4.18.2",
-        "cors": "^2.8.5",
-        "helmet": "^7.1.0",
-        "dotenv": "^16.3.1",
         "airtable": "^0.12.2",
         "axios": "^1.6.2",
-        "winston": "^3.11.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-rate-limit": "^7.1.5",
+        "helmet": "^7.1.0",
         "joi": "^17.11.0",
         "node-cron": "^3.0.3",
-        "express-rate-limit": "^7.1.5"
+        "tsconfig-paths": "^4.2.0",
+        "winston": "^3.11.0"
     },
     "devDependencies": {
-        "@types/express": "^4.17.21",
         "@types/cors": "^2.8.17",
-        "@types/node": "^20.10.5",
+        "@types/express": "^4.17.21",
         "@types/jest": "^29.5.8",
+        "@types/node": "^20.10.5",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
         "eslint": "^8.55.0",
