--- a/package.json
+++ b/package.json
@@ -22,16 +22,22 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
+        "@anthropic-ai/sdk": "^0.60.0",
+        "@types/cheerio": "^0.22.35",
+        "@types/uuid": "^10.0.0",
         "airtable": "^0.12.2",
-        "axios": "^1.6.2",
+        "axios": "^1.11.0",
+        "cheerio": "^1.1.2",
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1",
+        "dotenv": "^16.6.1",
         "express": "^4.18.2",
         "express-rate-limit": "^7.1.5",
         "helmet": "^7.1.0",
         "joi": "^17.11.0",
         "node-cron": "^3.0.3",
+        "openai": "^5.15.0",
         "tsconfig-paths": "^4.2.0",
+        "uuid": "^11.1.0",
         "winston": "^3.11.0"
     },
     "devDependencies": {
