--- a/env.example
+++ b/env.example
@@ -12,6 +12,16 @@ YAHOO_FINANCE_API_KEY=your_yahoo_finance_key_here_optional
 AIRTABLE_API_KEY=pat_your_airtable_personal_access_token_here
 AIRTABLE_BASE_ID=app_your_airtable_base_id_here
 
+# Supabase Configuration (REQUIRED for production scaling)
+SUPABASE_PROJECT_URL=https://your-project-id.supabase.co
+SUPABASE_API_KEY=your_supabase_anon_key_here
+SUPABASE_DB_PASSWORD=your_database_password_here
+SUPABASE_API_KEY=key_here
+SUPABASE_SERVICE_ROLE_KEY=key_here
+SUPABASE_SECRET_KEY=key_here
+SUPABASE_LEGACY_JWT_SECRET=key_here
+SUPABASE_JWT_STANDBY_KEY=key_here
+
 # Rate Limiting Configuration
 API_RATE_LIMIT_WINDOW_MS=900000           # 15 minutes in milliseconds
 API_RATE_LIMIT_MAX_REQUESTS=25            # Free tier: 25 requests per window
