--- a/env.example
+++ b/env.example
@@ -15,12 +15,11 @@ AIRTABLE_BASE_ID=app_your_airtable_base_id_here
 # Supabase Configuration (REQUIRED for production scaling)
 SUPABASE_PROJECT_URL=https://your-project-id.supabase.co
 SUPABASE_API_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 SUPABASE_DB_PASSWORD=your_database_password_here
-SUPABASE_API_KEY=key_here
-SUPABASE_SERVICE_ROLE_KEY=key_here
-SUPABASE_SECRET_KEY=key_here
-SUPABASE_LEGACY_JWT_SECRET=key_here
-SUPABASE_JWT_STANDBY_KEY=key_here
+
+# Supabase MCP Integration (for Cursor/Claude AI tools)
+SUPABASE_ACCESS_TOKEN=your_personal_access_token_here
 
 # Rate Limiting Configuration
 API_RATE_LIMIT_WINDOW_MS=900000           # 15 minutes in milliseconds
