--- a/env.example
+++ b/env.example
@@ -8,6 +8,16 @@ PORT=3000
 ALPHA_VANTAGE_API_KEY=your_alpha_vantage_key_here
 YAHOO_FINANCE_API_KEY=your_yahoo_finance_key_here_optional
 
+# News API Keys (FREE TIERS AVAILABLE)
+GNEWS_API_KEY=your_gnews_api_key_here                    # 100 requests/day, FULL content
+NEWSDATA_API_KEY=your_newsdata_api_key_here              # 500 requests/day, metadata only
+NEWSAPI_ORG_KEY=your_newsapi_org_key_here                # 1000 requests/day, headlines only
+MEDIASTACK_API_KEY=your_mediastack_api_key_here          # 500 requests/month, headlines only
+
+# AI Processing APIs
+OPENAI_API_KEY=your_openai_api_key_here
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
 # Airtable Configuration (REQUIRED)
 AIRTABLE_API_KEY=pat_your_airtable_personal_access_token_here
 AIRTABLE_BASE_ID=app_your_airtable_base_id_here
