--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "@felores/airtable-mcp-server": "^0.3.0",
         "@supabase/supabase-js": "^2.56.0",
         "@types/cheerio": "^0.22.35",
+        "@types/jsdom": "^21.1.7",
+        "@types/node-fetch": "^2.6.13",
         "@types/uuid": "^10.0.0",
         "airtable": "^0.12.2",
         "axios": "^1.11.0",
@@ -36,6 +38,7 @@
         "express-rate-limit": "^7.1.5",
         "helmet": "^7.1.0",
         "joi": "^17.11.0",
+        "jsdom": "^26.1.0",
         "node-cron": "^3.0.3",
         "openai": "^5.15.0",
         "tsconfig-paths": "^4.2.0",
