🚀 [FEAT] Complete API integration suite - NewsAPI.ai + Alpaca + Tiingo
✅ What was implemented:
- NewsAPI.ai service with Apple filtering and full content extraction
- Alpaca Stock API with multi-time-horizon data collection (free tier)
- Tiingo Stock API with historical data and intraday capabilities
- Comprehensive test scripts for all three APIs with detailed validation
- Side-by-side API comparison framework for optimal selection
- Package.json scripts for easy testing (npm run test-all-apis)

📋 Next steps:
- Add API keys to .env file (NEWSAPIAI_API_KEY, ALPACA_API_KEY, ALPACA_API_SECRET, TIINGO_API_KEY)
- Run test scripts to validate API connections and data quality
- Choose optimal stock API based on comparison results
- Integrate APIs into article processing pipeline for ML dataset enrichment

🎯 Impact: Complete API foundation for scaling from 119 to 10,000+ ML training rows with stock price targets

--- a/env.example
+++ b/env.example
@@ -13,6 +13,12 @@ GNEWS_API_KEY=your_gnews_api_key_here                    # 100 requests/day, FUL
 NEWSDATA_API_KEY=your_newsdata_api_key_here              # 500 requests/day, metadata only
 NEWSAPI_ORG_KEY=your_newsapi_org_key_here                # 1000 requests/day, headlines only
 MEDIASTACK_API_KEY=your_mediastack_api_key_here          # 500 requests/month, headlines only
+NEWSAPIAI_API_KEY=your_newsapi_ai_key_here               # Paid tier, FULL content, financial focus
+
+# Stock Data API Keys
+ALPACA_API_KEY=your_alpaca_api_key_here                  # Free tier, real-time stock data
+ALPACA_API_SECRET=your_alpaca_api_secret_here            # Required for Alpaca authentication
+TIINGO_API_KEY=your_tiingo_api_key_here                  # Free tier, historical + real-time data
 
 # AI Processing APIs
 OPENAI_API_KEY=your_openai_api_key_here
