--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
         "test": "jest",
         "test:watch": "jest --watch",
         "lint": "eslint src/**/*.ts",
-        "lint:fix": "eslint src/**/*.ts --fix"
+        "lint:fix": "eslint src/**/*.ts --fix",
+        "test-newsapi-ai": "npx tsx src/scripts/test-newsapi-ai.ts",
+        "test-alpaca": "npx tsx src/scripts/test-alpaca-stock.ts",
+        "test-tiingo": "npx tsx src/scripts/test-tiingo-stock.ts",
+        "compare-apis": "npx tsx src/scripts/compare-stock-apis.ts",
+        "test-all-apis": "npm run test-newsapi-ai && npm run test-alpaca && npm run test-tiingo && npm run compare-apis"
     },
     "keywords": [
         "market-prediction",
