🚀 [FEAT] Complete Stock Data Pipeline - Polygon.io Integration
✅ What was implemented:
- Enhanced stock_prices table with OHLCV, VWAP, trade_count fields
- Polygon.io service with FREE tier support (5 calls/min, 2 years historical)
- Stock data storage service with Supabase integration
- Complete pipeline: fetch → store → retrieve → analyze
- Rate limiting for FREE tier (5 API calls/minute)
- Minute-level precision data collection (tested: June 4, 2024 1:03 PM)
- MCP connection troubleshooting documentation
- Comprehensive test scripts for all components

📋 Next steps:
- Collect historical data for existing article timestamps
- Build correlation analysis between news events and stock movements
- Validate Phase 1 success criteria (>70% news-to-price correlation)
- Scale to additional tickers beyond Apple

🎯 Impact: Phase 1 Data Foundation now complete with minute-level stock data capability
- 721 data points successfully stored and retrieved
- Exact minute precision confirmed (June 4, 2024 at 1:03 PM EST)
- Ready for article correlation analysis and Phase 1 validation

--- a/env.example
+++ b/env.example
@@ -19,6 +19,7 @@ NEWSAPIAI_API_KEY=your_newsapi_ai_key_here               # Paid tier, FULL conte
 ALPACA_API_KEY=your_alpaca_api_key_here                  # Free tier, real-time stock data
 ALPACA_API_SECRET=your_alpaca_api_secret_here            # Required for Alpaca authentication
 TIINGO_API_KEY=your_tiingo_api_key_here                  # Free tier, historical + real-time data
+POLYGON_API_KEY=your_polygon_api_key_here                # Free tier: 5 calls/min, 2 years historical, minute aggregates
 
 # AI Processing APIs
 OPENAI_API_KEY=your_openai_api_key_here
