🤖 [FEAT] ML Pipeline & Advanced Data Collection - Phase 2 Foundation
✅ What was implemented:
- Complete ML pipeline with Random Forest for stock prediction
- Feature engineering for relative performance analysis (vs benchmarks)
- Python integration with scikit-learn for advanced ML capabilities
- News service factory pattern for multiple API sources
- Finlight service integration for additional data sources
- Comprehensive data collection scripts for benchmark tickers
- Advanced stock data collection with 1-week and 2-day strategies
- ML training pipeline with feature extraction and model persistence

📋 Core Components Added:
- ML Models: Random Forest pipeline with feature engineering
- Data Collection: Multi-ticker benchmark collection (SPY, QQQ, AAPL)
- Services: News service factory, Finlight integration
- Python: Requirements and training scripts for scikit-learn
- Scripts: Comprehensive database collection and ML training tools

🎯 Impact: Phase 2 ML Foundation complete - ready for predictive analysis
- Relative performance calculation vs market benchmarks
- Feature engineering for news-to-stock correlation
- Scalable ML pipeline for multiple prediction models
- Advanced data collection beyond basic OHLCV metrics

📊 Next: Train models on collected data and validate prediction accuracy

--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
         "test-alpaca": "npx tsx src/scripts/test-alpaca-stock.ts",
         "test-tiingo": "npx tsx src/scripts/test-tiingo-stock.ts",
         "compare-apis": "npx tsx src/scripts/compare-stock-apis.ts",
-        "test-all-apis": "npm run test-newsapi-ai && npm run test-alpaca && npm run test-tiingo && npm run compare-apis"
+        "test-all-apis": "npm run test-newsapi-ai && npm run test-alpaca && npm run test-tiingo && npm run compare-apis",
+        "collect-benchmarks": "npx tsx src/scripts/ml/collectBenchmarkData.ts",
+        "train-ml": "npx tsx src/scripts/ml/trainMLPipeline.ts",
+        "setup-python": "cd python && python -m venv venv && source venv/bin/activate && pip install -r requirements.txt",
+        "python-train": "cd python && python train_random_forest.py"
     },
     "keywords": [
         "market-prediction",
@@ -41,6 +45,7 @@
         "dotenv": "^16.6.1",
         "express": "^4.18.2",
         "express-rate-limit": "^7.1.5",
+        "finlight-client": "^2.2.4",
         "helmet": "^7.1.0",
         "joi": "^17.11.0",
         "jsdom": "^26.1.0",
