🔥 [FIX] Update batch pipeline to GPT-4.1-mini and fix database column mapping
✅ What was implemented:
- Fixed model reference from gpt-4o-mini to gpt-4.1-mini in batch processing
- Corrected ai_responses table column mapping (raw_response vs raw_ai_response)
- Validated batch processing pipeline generates correct JSONL format
- Tested single batch request successfully (37s, 18k tokens)

📋 Next steps:
- CRITICAL: Responses hitting token limits causing 100% JSON truncation failures
- Need to split into two-stage processing: business events → causal chains
- Backup original instructions/schema before refactoring
- Create separate pipelines for business events vs causal analysis

🎯 Impact: Identified token limit bottleneck requiring architectural split for scalability

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "collect-benchmarks": "npx tsx src/scripts/ml/collectBenchmarkData.ts",
         "train-ml": "npx tsx src/scripts/ml/trainMLPipeline.ts",
         "setup-python": "cd python && python -m venv venv && source venv/bin/activate && pip install -r requirements.txt",
-        "python-train": "cd python && python train_random_forest.py"
+        "python-train": "cd python && python train_random_forest.py",
+        "shap-analysis": "cd python && python shap_analysis.py"
     },
     "keywords": [
         "market-prediction",
